<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.InviteActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_FE393A"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:orientation="horizontal"
                android:background="@color/c_E14613"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/notice_white_icon"
                    />
                <ViewFlipper
                    android:id="@+id/viewflipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:inAnimation="@anim/notice_in"
                    android:outAnimation="@anim/notice_out"
                    android:autoStart="true"
                    android:flipInterval="3000"
                    />

            </LinearLayout>
            <ImageView
                android:layout_below="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/invite_bg"
                android:scaleType="fitXY"
                />
            <LinearLayout
                android:layout_below="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_marginTop="3dp"
                    >
                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="13dp"
                        android:layout_height="20dp"
                        android:src="@mipmap/steprace_history_back_icon"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        />
                    <TextView
                        android:id="@+id/tv_gz"
                        android:layout_width="80dp"
                        android:layout_height="28dp"
                        android:layout_alignParentRight="true"
                        android:text="@string/activitygz"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        android:textSize="14sp"
                        android:textColor="@color/c_FF2800"
                        android:background="@drawable/invite_gz_shape"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="288dp"
                    android:layout_marginLeft="31dp"
                    android:layout_marginRight="31dp"
                    android:background="@mipmap/invite_bg1"
                    >

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_invite_tip"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="33dp"
                        android:textSize="14sp"
                        android:textColor="@color/c_B57E36"
                        />
                    <LinearLayout
                        android:id="@+id/tv_2"
                        android:layout_below="@+id/tv_1"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/get_money"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="50sp"
                            android:textColor="@color/c_FF4051"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="元"
                            android:textSize="20sp"
                            android:textColor="@color/c_FF2800"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_copy"
                        android:layout_below="@+id/tv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myyqm"
                            android:textColor="@color/c_B57E36"
                            android:textSize="13dp"
                            />
                        <TextView
                            android:id="@+id/tv_yqm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/c_B57E36"
                            android:textSize="13dp"
                            android:layout_marginLeft="10dp"
                            />

                        <TextView
                            android:id="@+id/tv_copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="复制"
                            android:textColor="@color/white"
                            android:textSize="13dp"
                            android:layout_marginLeft="10dp"
                            android:gravity="center"
                            android:background="@drawable/invite_copy_shape"
                            />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/invite_btn"
                        android:layout_width="251dp"
                        android:layout_height="45dp"
                        android:src="@mipmap/invite_button"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="43dp"
                        />

                </RelativeLayout>

                <LinearLayout
                    android:layout_marginTop="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@mipmap/invite_bg2"
                    >
                    <RelativeLayout
                        android:layout_marginTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_invite_tip1"
                            android:layout_centerHorizontal="true"
                            android:textSize="15sp"
                            android:layout_centerVertical="true"
                            android:textColor="@color/c_FFCA5B"
                            />
                        <TextView
                            android:id="@+id/tv_friendmanager"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_invite_tip2"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:textSize="13sp"
                            android:textColor="@color/c_CE3A2D"
                            android:layout_marginRight="45dp"
                            android:background="@drawable/invite_hymanager_shape"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        >
                        <View
                            android:id="@+id/vertical_line"
                            android:layout_width="0.5dp"
                            android:layout_height="47dp"
                            android:background="@color/white"
                            android:layout_centerInParent="true"
                            />
                        <LinearLayout
                            android:layout_toLeftOf="@+id/vertical_line"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/string_invite_tip3"
                                android:textSize="13sp"
                                android:textColor="@color/c_FFDAAD"
                                />
                            <TextView
                                android:id="@+id/success_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:layout_marginTop="5dp"
                                android:textSize="24sp"
                                android:textColor="@color/c_FFDAAD"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_toRightOf="@+id/vertical_line"
                            android:layout_marginLeft="30dp"
                            android:layout_width="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/string_invite_tip4"
                                android:textSize="13sp"
                                android:textColor="@color/c_FFDAAD"
                                />
                            <TextView
                                android:id="@+id/forecast_earnings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:layout_marginTop="5dp"
                                android:textSize="24sp"
                                android:textColor="@color/c_FFDAAD"
                                />

                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/invite_bg3"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_invite_tip5"
                        android:textColor="@color/c_FFCA5B"
                        android:textSize="15sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="35dp"
                        />
                    <include
                        android:id="@+id/common_layout"
                        layout="@layout/invite_common_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="70dp"
                        />
                    <TextView
                        android:layout_below="@+id/common_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_invite_tip6"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:textSize="12sp"
                        android:textColor="@color/c_FFF3C0"
                        />

                </RelativeLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="176dp"
                    android:src="@mipmap/invite_bg6"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center_horizontal"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    />


            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/invite_layout"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:visibility="visible"
        android:orientation="horizontal"
        >
            <LinearLayout
                android:id="@+id/share_to_weixin_friends"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@mipmap/wechat_session_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/black_33"
                    android:text="@string/string_invite_tip12"
                    android:layout_marginTop="5dp"
                    />


            </LinearLayout>
        <LinearLayout
            android:id="@+id/share_to_weixin_timeline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/wechat_timeline_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black_33"
                android:text="@string/string_invite_tip13"
                android:layout_marginTop="5dp"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_to_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/invite_code_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black_33"
                android:text="@string/string_invite_tip14"
                android:layout_marginTop="5dp"
                />


        </LinearLayout>

    </LinearLayout>
</FrameLayout>